[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letterboxdpy"
version = "6.0.0"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "curl_cffi>=0.14.0",
    "pykit @ git+https://github.com/fastfingertips/pykit.git"
]
requires-python = ">=3.9"
authors = [
  { name="Nicholas Cassarino", email="nmcassa804@outlook.com" },
]
maintainers = [
    { name="FastFingertips", email="fastfingertips@gmail.com" }
]
description = "A letterboxd webscraper"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["letterboxd", "webscraper", "movie", "film", "rating", "review", "watchlist", "diary"]

[project.urls]
Repository = "https://github.com/nmcassa/letterboxdpy"
Documentation = "https://github.com/nmcassa/letterboxdpy"
"Bug Tracker" = "https://github.com/nmcassa/letterboxdpy/issues"
"Source Code" = "https://github.com/nmcassa/letterboxdpy/archive/refs/heads/main.zip"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["letterboxdpy"]