[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "letterboxdpy"
version = "6.5.2"
description = "A letterboxd webscraper"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.1.0",
    "curl_cffi>=0.15.0",
    "fastfingertips>=0.1.4"
]
keywords = ["letterboxd", "webscraper", "movie", "film", "rating", "review", "watchlist", "diary"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "Nicholas Cassarino"
email = "nmcassa804@outlook.com"

[[project.maintainers]]
name = "FastFingertips"
email = "fastfingertips@gmail.com"

[project.optional-dependencies]
examples = [
    "rich",
    "Jinja2",
    "matplotlib>=3.5.0",
    "numpy>=1.21.0",
    "pillow>=8.0.0"
]

[project.urls]
Repository = "https://github.com/nmcassa/letterboxdpy"
Documentation = "https://github.com/nmcassa/letterboxdpy"
"Bug Tracker" = "https://github.com/nmcassa/letterboxdpy/issues"
"Source Code" = "https://github.com/nmcassa/letterboxdpy/archive/refs/heads/main.zip"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["letterboxdpy"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# E      : Error
# F      : Pyflakes
# W      : Warning
# B      : Bugbear (Common bugs)
# I      : Isort (Import sorting)
# UP     : Upgrade (Modern Python syntax)
# S      : Bandit (Security)
# C90    : McCabe (Complexity)
# SIM    : Simplify (Cleaner code)
# PERF   : Performance
# PT     : Pytest style
# RUF    : Ruff-specific rules
# PLE,PLW: Pylint errors/warnings
select = ["E", "F", "W", "B", "I", "UP", "S", "C90", "SIM", "PERF", "PT", "RUF", "PLE", "PLW"]

ignore = [
    "E402",    # Module level import not at top (needed for sys.path hacks)
    "E501",    # Line too long (docstrings and UI strings are exempt)
    "S101",    # Use of assert (handled in per-file-ignores)
    "PLR0913", # Too many arguments for function
    "PLW2901", # Loop variable overwritten by assignment target
    "B019",    # lru_cache on methods (common in scraper objects)
    "PERF203", # try-except in loops (often required for network calls)
    "PERF401", # list.extend vs loop (manual loops often clearer in scrapers)
]

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PT009", "PT027"] # Use of assert and legacy unittest assertions
"examples/*" = ["T201", "T203", "S110", "S112", "S608", "RUF012", "S605", "S603", "C901", "S311", "SIM105", "S607"]   # Examples can be complex and simple
"docs/*" = ["E501"]  # Long docstrings in docs helper scripts
"letterboxdpy/legacy_search.py" = ["C901"] # Intentionally complex legacy logic
"letterboxdpy/pages/user_network.py" = ["C901"]
"letterboxdpy/pages/user_likes.py" = ["C901", "S112"]
"letterboxdpy/pages/user_films.py" = ["C901"]
"letterboxdpy/pages/user_diary.py" = ["C901"]
"letterboxdpy/utils/lists_extractor.py" = ["C901"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pytest]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
